fix(contracts): mapOrEmpty preserves insertion order
Map.copyOf(new LinkedHashMap<>(values)) discarded the LinkedHashMap
wrapper's order: Map.copyOf returns a hash-ordered MapN, so
RenderMetadata/SourceNode/SourceRelationship/SvgStylePolicy map fields
serialized in hash-probe order instead of document/insertion order.

Fix keeps a LinkedHashMap copy, explicitly re-asserts Map.copyOf's
null-hostility (key and value), and wraps it unmodifiable instead of
routing through Map.copyOf.

No fixture/golden updates were needed: this is a byte-observable
ordering change, but engines/render/src/test/.../RenderGoldenTest
already does byte-identity SVG comparison over fixtures with multi-key
maps (up to 62 keys in render-policy SvgStylePolicy overrides, 15 keys
in render-metadata node/edge selectors) and it stayed green, because
every consumer (StyleResolver, Geometry, EdgeRenderer,
RenderInputValidator) looks values up by key rather than iterating in
map order; the one iteration site (UmlSequenceModel.from) is
explicitly re-sorted by id downstream before SVG emission.